--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="margin:0">
     <canvas></canvas>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src = "index.js"></script>
 </body>
 </html>
